[gd_scene load_steps=2 format=2]

[ext_resource path="res://widgets/CanvasSize.gd" type="Script" id=1]

[node name="CanvasSize" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
window_title = "Canvas Size"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxTexture" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 175.0
margin_bottom = 32.0
alignment = 2

[node name="TextureLabel" type="Label" parent="VBoxContainer/HBoxTexture"]
margin_top = 9.0
margin_right = 134.0
margin_bottom = 23.0
text = "Texture Canvas Size: "

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxTexture"]
margin_left = 138.0
margin_right = 157.0
margin_bottom = 32.0
alignment = 1

[node name="HBoxWidth" type="HBoxContainer" parent="VBoxContainer/HBoxTexture/VBoxContainer"]
margin_right = 19.0
margin_bottom = 14.0
alignment = 2

[node name="DescLabel" type="Label" parent="VBoxContainer/HBoxTexture/VBoxContainer/HBoxWidth"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 14.0
text = "Width "

[node name="Width" type="SpinBox" parent="VBoxContainer/HBoxTexture/VBoxContainer/HBoxWidth"]
max_value = 10000.0
value = 16.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxTexture/VBoxContainer/HBoxWidth"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 14.0
text = "px"

[node name="HBoxHeight" type="HBoxContainer" parent="VBoxContainer/HBoxTexture/VBoxContainer"]
margin_top = 18.0
margin_right = 19.0
margin_bottom = 32.0
alignment = 2

[node name="DescLabel" type="Label" parent="VBoxContainer/HBoxTexture/VBoxContainer/HBoxHeight"]
margin_left = 4.0
margin_right = 46.0
margin_bottom = 14.0
text = "Height "

[node name="Height" type="SpinBox" parent="VBoxContainer/HBoxTexture/VBoxContainer/HBoxHeight"]
margin_bottom = 14.0
max_value = 10000.0
value = 16.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxTexture/VBoxContainer/HBoxHeight"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 14.0
text = "px"

[node name="HBoxAnimation" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 175.0
margin_bottom = 68.0

[node name="AnimationLabel" type="Label" parent="VBoxContainer/HBoxAnimation"]
margin_top = 9.0
margin_right = 152.0
margin_bottom = 23.0
text = "Animation Canvas Size: "

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxAnimation"]
margin_left = 156.0
margin_right = 175.0
margin_bottom = 32.0

[node name="HBoxWidth" type="HBoxContainer" parent="VBoxContainer/HBoxAnimation/VBoxContainer"]
margin_right = 19.0
margin_bottom = 14.0
alignment = 2

[node name="DescLabel" type="Label" parent="VBoxContainer/HBoxAnimation/VBoxContainer/HBoxWidth"]
margin_left = 4.0
margin_right = 46.0
margin_bottom = 14.0
text = "Width "

[node name="Width" type="SpinBox" parent="VBoxContainer/HBoxAnimation/VBoxContainer/HBoxWidth"]
margin_bottom = 14.0
max_value = 10000.0
value = 16.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxAnimation/VBoxContainer/HBoxWidth"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 14.0
text = "px"

[node name="HBoxHeight" type="HBoxContainer" parent="VBoxContainer/HBoxAnimation/VBoxContainer"]
margin_top = 18.0
margin_right = 19.0
margin_bottom = 32.0
alignment = 2

[node name="DescLabel" type="Label" parent="VBoxContainer/HBoxAnimation/VBoxContainer/HBoxHeight"]
margin_left = 4.0
margin_right = 46.0
margin_bottom = 14.0
text = "Height "

[node name="Height" type="SpinBox" parent="VBoxContainer/HBoxAnimation/VBoxContainer/HBoxHeight"]
margin_bottom = 14.0
max_value = 10000.0
value = 16.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxAnimation/VBoxContainer/HBoxHeight"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 14.0
text = "px"

[node name="OKButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 175.0
margin_bottom = 92.0
text = "OK"

[connection signal="pressed" from="VBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
